--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
   compileSdkVersion 23
@@ -11,11 +13,18 @@ android {
     versionCode 1
     versionName "1.0"
   }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
   buildTypes {
     release {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+  }
+  packagingOptions {
+    exclude 'META-INF/services/javax.annotation.processing.Processor'
   }
 }
 
@@ -23,4 +32,14 @@ dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
   compile 'com.android.support:appcompat-v7:23.3.0'
+  compile 'com.android.support:design:23.3.0'
+  compile 'com.android.support:support-v4:23.3.0'
+
+  compile 'com.google.dagger:dagger-compiler:2.0.1'
+  compile 'com.google.dagger:dagger:2.0.1'
+  compile 'com.jakewharton:butterknife:8.0.0'
+  apt 'com.jakewharton:butterknife-compiler:8.0.0'
+  provided 'javax.annotation:jsr250-api:1.0'
+
+
 }
