--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
   compile 'com.jakewharton:butterknife:8.0.0'
   apt 'com.jakewharton:butterknife-compiler:8.0.0'
   provided 'javax.annotation:jsr250-api:1.0'
+  compile 'com.squareup.picasso:picasso:2.5.2'
 
 
 }
