--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
       android:label="@string/app_name"
       android:name=".KoloroApplication"
       android:supportsRtl="true"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme.NoActionBar">
     <activity
         android:name=".ui.KoloroActivity"
         android:label="@string/app_name"
@@ -24,6 +24,7 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+    <activity android:name=".ui.ColorPickActivity"/>
     <service android:name=".service.KoloroService"/>
   </application>
 
