--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
   apt 'com.jakewharton:butterknife-compiler:8.0.0'
   provided 'javax.annotation:jsr250-api:1.0'
   compile 'com.squareup.picasso:picasso:2.5.2'
+  compile 'io.reactivex:rxandroid:1.0.1'
+  compile 'io.reactivex:rxjava:1.0.14'
 
 
 }
