--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,6 @@ dependencies {
   compile 'com.squareup.picasso:picasso:2.5.2'
   compile 'io.reactivex:rxandroid:1.0.1'
   compile 'io.reactivex:rxjava:1.0.14'
-
+  compile 'org.greenrobot:eventbus:3.0.0'
 
 }
