--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,8 @@ dependencies {
   compile 'io.reactivex:rxandroid:1.0.1'
   compile 'io.reactivex:rxjava:1.0.14'
   compile 'org.greenrobot:eventbus:3.0.0'
+  compile ('com.github.ozodrukh:CircularReveal:1.3.1@aar') {
+    transitive = true;
+  }
 
 }
