--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
   repositories {
     jcenter()
     mavenCentral()
+    maven {
+      url "https://jitpack.io"
+    }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:2.1.0'
@@ -19,6 +22,9 @@ allprojects {
   repositories {
     jcenter()
     mavenCentral()
+    maven {
+      url "https://jitpack.io"
+    }
   }
 }
 
