remove flash view. For not vibrate and display toast

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,12 @@
     </activity>
     <activity android:name=".ui.ColorPickActivity"/>
     <service android:name=".service.KoloroService"/>
+    <receiver android:name=".TestReceiver">
+      <intent-filter>
+        <action android:name="android.intent.action.MEDIA_SCANNER_SCAN_FILE"/>
+        <action android:name="android.intent.action.MEDIA_SCANNER_FINISHED"/>
+      </intent-filter>
+    </receiver>
   </application>
 
 </manifest>
