--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
   compile ('com.github.ozodrukh:CircularReveal:1.3.1@aar') {
     transitive = true;
   }
+  compile 'com.afollestad.material-dialogs:core:0.8.5.9'
 
 }
