--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,10 @@ dependencies {
     transitive = true;
   }
   compile 'com.afollestad.material-dialogs:core:0.8.5.9'
+  apply plugin: 'com.google.gms.google-services'
+  compile 'com.google.firebase:firebase-core:9.0.1'
+  compile 'com.google.firebase:firebase-analytics:9.0.0'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
