--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
   compile 'com.google.firebase:firebase-analytics:9.0.0'
   compile 'com.google.firebase:firebase-crash:9.0.1'
   compile 'com.google.firebase:firebase-ads:9.0.1'
+  compile 'me.relex:circleindicator:1.2.1@aar'
 
 }
 
