--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:name=".ui.KoloroActivity"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.Translucent"
+        >
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
@@ -28,7 +29,10 @@
     </activity>
     <activity android:name=".ui.ColorPickActivity"/>
     <activity android:name=".ui.HelpActivity" android:parentActivityName=".ui.KoloroActivity"/>
+    <activity android:name=".ui.QuickLaunchActivity" android:theme="@style/AppTheme.Translucent"/>
     <service android:name=".service.KoloroService"/>
   </application>
 
 </manifest>
+
+<!-- android:theme="@style/AppTheme.NoActionBar" -->
