--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
   compile 'com.google.firebase:firebase-crash:9.0.1'
   compile 'com.google.firebase:firebase-ads:9.0.1'
   compile 'me.relex:circleindicator:1.2.1@aar'
+  compile 'com.github.paolorotolo:appintro:4.0.0'
 
 }
 
