--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:name=".ui.KoloroActivity"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
-        android:theme="@style/AppTheme.NoActionBar"
+        android:theme="@style/AppTheme.Translucent"
         >
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
