--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,17 +45,14 @@ dependencies {
   compile 'io.reactivex:rxandroid:1.0.1'
   compile 'io.reactivex:rxjava:1.0.14'
   compile 'org.greenrobot:eventbus:3.0.0'
-  compile ('com.github.ozodrukh:CircularReveal:1.3.1@aar') {
-    transitive = true;
-  }
   compile 'com.afollestad.material-dialogs:core:0.8.5.9'
   apply plugin: 'com.google.gms.google-services'
   compile 'com.google.firebase:firebase-core:9.0.1'
   compile 'com.google.firebase:firebase-analytics:9.0.0'
   compile 'com.google.firebase:firebase-crash:9.0.1'
   compile 'com.google.firebase:firebase-ads:9.0.1'
-  compile 'me.relex:circleindicator:1.2.1@aar'
   compile 'com.github.paolorotolo:appintro:4.0.0'
+  compile 'it.sephiroth.android.library.targettooltip:target-tooltip-library:1.3.14'
 
 }
 
